2008-03-25  Philip Van Hoof <pvanhoof@gnome.org>

	* Replaced a GByteArray with a EByteArray

2008-03-24  Philip Van Hoof <pvanhoof@gnome.org>

	* Rewrote tny_camel_folder_remove_msgs_default
	* Added tny_folder_remove_msgs_async
	* Death-lock bugfix when canceling the sendqueue

	* This was a minor API change

2008-03-20  Philip Van Hoof <pvanhoof@gnome.org>

	* Implementation of a connect() that will timeout within 15 seconds
	for the non-SSL connection types. Experimental.

2008-03-19  Philip Van Hoof <pvanhoof@gnome.org>

	* Fast message moves when source and dest folder are both Maildir

2008-03-19  Philip Van Hoof <pvanhoof@gnome.org>

	* Bugfix when sending large E-mails to GMail's SMTP service
	* When a large mail is being sent, it takes a long time to move it
	from Outbox to Sentbox. If during that time a flush() is requested on
	the TnySendQueue, then it's possible that the message gets send twice.
	To avoid this, we mark the message as TNY_HEADER_FLAG_ANSWERED

2008-03-18  Sergio Villar Senin  <svillar@igalia.com>

	* Small bugfix in libtinymail-maemo

2008-03-18  Philip Van Hoof <pvanhoof@gnome.org>

	* Non-initialization of a variable caused memory corruption on the
	stack
	* Fixed race condition in case re-selecting the same folder

2008-03-17  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-camel/camel-lite/camel/providers/imap/camel-imap-folder.c:
	fixed an small memory leak and set the proper error code when a
	get_msg fails due to full memory conditions in the local storage.
	* libtinymail-camel/camel-lite/camel/camel-folder-summary.c: improved
	error notification when there are problems in the local storage

2008-03-17  Philip Van Hoof <pvanhoof@gnome.org>

	* Made tny_folder_transfer_msgs_async cancellable

2008-03-17  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail-camel/camel-lite/camel/providers/imap/camel-imap-folder.c
	(message_from_data): don't free the message before evaluating